Alteração dos textos

--- a/index.html
+++ b/index.html
@@ -112,20 +112,20 @@
         <div class="section-header">
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Conheça-nos</h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>Fazemos do seu sucesso, nossa conquista.</p>
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>A nossa maior conquista é o seu sucesso.</p>
         </div>
 
         <div class="row">
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
               <h4>Missão</h4>
-              <p>Potencializar competências e despertar o empreendedorismo como opção de carreira gerando valor para a Região do Cariri.</p>
+              <p>Potencializar competências ajudando a gerenciar de forma segura todos os recursos da sua empresa.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
               <h4>Visão</h4>
-              <p>Desenvolver um polo de cultura empreendedora no interior do Nordeste até 2025.</p>
+              <p>Nosso objetivo é ser referência como empresa produtora e fornecedora dos melhores serviços gerenciais para a sua empresa.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
@@ -187,7 +187,7 @@
         <div class="section-header">
           <h2 class="section-title">Nossa Equipe</h2>
           <hr class="lines">
-          <p class="section-subtitle">Nossa equipe é composta por profissionais competentes, em constante desenvolvimento, aprimoramento, com força de vontade e comprometimento sempre em buscando a excelência em qualidade, performance e a satisfação dos nossos clientes!</p>
+          <p class="section-subtitle">Nossa equipe é composta por profissionais competentes em constante desenvolvimento e aprimoramento. Com força de vontade e comprometimento sempre em buscas da excelência em qualidade, performance e a satisfação dos nossos clientes.</p>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 col-xs-12">
@@ -298,9 +298,7 @@
         <div class="section-header">
           <h2 class="section-title">Centro de Empreendedorismo e Inovação</h2>
           <hr class="lines">
-          <p class="section-subtitle">
-            O responsável por possibilitar essa empresa se tornar uma realidade.
-          </p>
+          
         </div>
 
         <div class="row">
