--- a/index.html
+++ b/index.html
@@ -112,26 +112,25 @@
         <div class="section-header">
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Conheça-nos</h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>A nossa maior conquista é o seu sucesso.</p>
+          <!--<p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>A nossa maior conquista é o seu sucesso.</p>-->
         </div>
-
         <div class="row">
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
               <h4>Missão</h4>
-              <p>Potencializar competências ajudando a gerenciar de forma segura todos os recursos da sua empresa.</p>
+              <p class="text-justify">Potencializar competências ajudando a gerenciar de forma segura todos os recursos da sua empresa.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
               <h4>Visão</h4>
-              <p>Nosso objetivo é ser referência como empresa produtora e fornecedora dos melhores serviços gerenciais para a sua empresa.</p>
+              <p class="text-justify">Nosso objetivo é ser referência como empresa produtora e fornecedora dos melhores serviços gerenciais para a sua empresa.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
               <h4>Valores</h4>
-              <p>Ética, Inovação e Sustentabilidade na Edificação do empreendedor caririense.</p>
+              <p class="text-justify">Ética, Inovação e Sustentabilidade na Edificação do empreendedor caririense.</p>
             </div>
           </div>
         </div>
@@ -156,7 +155,10 @@
               <i class="lnr lnr-pencil"></i>
             </div>
             <h4>Design</h4>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+            <p class="text-justify">A divulgação do seu negócio é algo indispensável para o seu crescimento, correto?
+              Para tal, te oferecemos sites profissionais juntamente com um apoio de Marketing totalmente integrado com todas as redes sociais para você
+              bombar na web.
+            </p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -165,7 +167,9 @@
               <i class="lnr lnr-code"></i>
             </div>
             <h4>Desenvolvimento Web</h4>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+            <p class="text-justify">Quem nunca sonhou em ter um controle total de tempo e recursos do seu negócio? Te oferecemos sistemas Web totalmente integrados com o seu Site, assim você pode gerenciar melhor todo o seu negócio tendo um controle total
+              de todo o seu investimento.
+             </p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
@@ -174,7 +178,8 @@
               <i class="lnr lnr-graduation-hat"></i>
             </div>
             <h4>Cursos e Treinamento</h4>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut.</p>
+            <p class="text-justify">Te oferecemos um curso completo envolvendo toda a sua gestão de TI(Tecnologia da informação), além de oferecermos um amplo suporte de
+              Marketing digital para dar aquele up no seu negocio.</p>
           </div>
         </div>
       </div>
@@ -187,7 +192,7 @@
         <div class="section-header">
           <h2 class="section-title">Nossa Equipe</h2>
           <hr class="lines">
-          <p class="section-subtitle">Nossa equipe é composta por profissionais competentes em constante desenvolvimento e aprimoramento. Com força de vontade e comprometimento sempre em buscas da excelência em qualidade, performance e a satisfação dos nossos clientes.</p>
+          <!--<p class="section-subtitle">Nossa equipe é composta por profissionais competentes em constante desenvolvimento e aprimoramento. Com força de vontade e comprometimento sempre em buscas da excelência em qualidade, performance e a satisfação dos nossos clientes.</p> -->
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 col-xs-12">
@@ -196,10 +201,11 @@
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Walison Martins</h4>
-                  <p>Design</p>
+                  <p>Gerente de Marketing e Design</p>
                   <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/walisonmartins.desing"><i class="fa fa-facebook"></i></a></li>
+                    <li class="instagram"><a href="https://www.instagram.com/walisonmartins_/?hl=pt-br"><i class="fa fa-instagram"></i></a></li>
+                    <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5588997611979&text=sua%20mensagem"><i class="fa fa-whatsapp"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -212,10 +218,11 @@
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Jonilson Sousa</h4>
-                  <p>Desenvolvedor</p>
+                  <p>Gerente de Desenvolvimentor</p>
                   <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/jonilson.souza.1"><i class="fa fa-facebook"></i></a></li>
+                    <li class="instagram"><a href="https://www.instagram.com/jonilson_sousa_s/?hl=pt-br"><i class="fa fa-instagram"></i></a></li>
+                    <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5588999410067&text=sua%20mensagem"><i class="fa fa-whatsapp"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -230,8 +237,9 @@
                   <h4 class="team-title">Carlos Henrique</h4>
                   <p>Gerente de Projetos</p>
                   <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/henrique.matias.7"><i class="fa fa-facebook"></i></a></li>
+                    <li class="instagram"><a href="https://www.instagram.com/henrique_matias14/?hl=pt-br"><i class="fa fa-instagram"></i></a></li>
+                    <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5588997754155&text=sua%20mensagem"><i class="fa fa-whatsapp"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -246,8 +254,9 @@
                   <h4 class="team-title">Pedro Álisson</h4>
                   <p>Analista de Banco de Dados</p>
                   <ul class="social-list">
-                    <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/profile.php?id=100009592251990"><i class="fa fa-facebook"></i></a></li>
+                    <li class="instagram"><a href="https://www.instagram.com/pedro__alisson__/?hl=pt-br"><i class="fa fa-instagram"></i></a></li>
+                    <li class="whatsapp"><a href="https://api.whatsapp.com/send?phone=558888998708282&text=sua%20mensagem"><i class="fa fa-whatsapp"></i></a></li>
                     <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                   </ul>
                 </div>
@@ -298,7 +307,7 @@
         <div class="section-header">
           <h2 class="section-title">Centro de Empreendedorismo e Inovação</h2>
           <hr class="lines">
-          
+
         </div>
 
         <div class="row">
