Alterações de nomes e linnhas divisorias.

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
           <!--<p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s"> Comprometimento não é apenas o que se vê, é o que se sente. <br>A nossa maior conquista é o seu sucesso.</p>-->
         </div>
         <div class="row">
-          <div class="col-md-4 col-sm-6">
+          <div id="linhalateral" class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
               <h4>Missão</h4>
               <p class="text-justify">Potencializar competências ajudando a gerenciar de forma segura todos os recursos da sua empresa.</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6">
+          <div id="linhalateral" class="col-md-4 col-sm-6">
             <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
               <h4>Visão</h4>
               <p class="text-justify">Nosso objetivo é ser referência como empresa produtora e fornecedora dos melhores serviços gerenciais para a sua empresa.</p>
@@ -146,8 +146,6 @@
           <h2 class="section-title">Nossos Serviços</h2>
           <hr class="lines">
         </div>
-      </div>
-
       <div class="row">
         <div class="col-md-4 col-sm-6">
           <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
@@ -182,6 +180,7 @@
               Marketing digital para dar aquele up no seu negocio.</p>
           </div>
         </div>
+      </div>
       </div>
     </section>
     <!-- Features Section End -->
@@ -218,7 +217,7 @@
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Jonilson Sousa</h4>
-                  <p>Gerente de Desenvolvimentor</p>
+                  <p>Gerente de Desenvolvimento</p>
                   <ul class="social-list">
                     <li class="facebook"><a href="https://www.facebook.com/jonilson.souza.1"><i class="fa fa-facebook"></i></a></li>
                     <li class="instagram"><a href="https://www.instagram.com/jonilson_sousa_s/?hl=pt-br"><i class="fa fa-instagram"></i></a></li>
