--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <!-- Navbar End -->
       <div class="container">
         <div class="row justify-content-md-left text-main">
-          <div class="col-md-6">
-            <div class="contents text-left">
+          <div class="col-md-12">
+            <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">QUE TAL DAR UM UP NO SEU NEGÓCIO!</h1>
               <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Aprenda de forma fácil como gerenciar recursos, adminstrar pessoas e otimizar seu tempo. </p>
             </div>
@@ -146,40 +146,40 @@
           <h2 class="section-title">Nossos Serviços</h2>
           <hr class="lines">
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-4 col-sm-6">
-          <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
-            <div class="icon">
-              <i class="lnr lnr-pencil"></i>
+        <div class="row">
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="0.2s">
+              <div class="icon">
+                <i class="lnr lnr-pencil"></i>
+              </div>
+              <h4>Design</h4>
+              <p class="text-justify">A divulgação do seu negócio é algo indispensável para o seu crescimento, correto?
+                Para tal, te oferecemos sites profissionais juntamente com um apoio de Marketing totalmente integrado com todas as redes sociais para você
+                bombar na web.
+              </p>
             </div>
-            <h4>Design</h4>
-            <p class="text-justify">A divulgação do seu negócio é algo indispensável para o seu crescimento, correto?
-              Para tal, te oferecemos sites profissionais juntamente com um apoio de Marketing totalmente integrado com todas as redes sociais para você
-              bombar na web.
-            </p>
           </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
-            <div class="icon">
-              <i class="lnr lnr-code"></i>
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="0.8s">
+              <div class="icon">
+                <i class="lnr lnr-code"></i>
+              </div>
+              <h4>Desenvolvimento Web</h4>
+              <p class="text-justify">Quem nunca sonhou em ter um controle total de tempo e recursos do seu negócio? Te oferecemos sistemas Web totalmente integrados com o seu Site, assim você pode gerenciar melhor todo o seu negócio tendo um controle total
+                de todo o seu investimento.
+               </p>
             </div>
-            <h4>Desenvolvimento Web</h4>
-            <p class="text-justify">Quem nunca sonhou em ter um controle total de tempo e recursos do seu negócio? Te oferecemos sistemas Web totalmente integrados com o seu Site, assim você pode gerenciar melhor todo o seu negócio tendo um controle total
-              de todo o seu investimento.
-             </p>
           </div>
-        </div>
-        <div class="col-md-4 col-sm-6">
-          <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
-            <div class="icon">
-              <i class="lnr lnr-graduation-hat"></i>
+          <div class="col-md-4 col-sm-6">
+            <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
+              <div class="icon">
+                <i class="lnr lnr-graduation-hat"></i>
+              </div>
+              <h4>Cursos e Treinamento</h4>
+              <p class="text-justify">Te oferecemos um curso completo envolvendo toda a sua gestão de TI (Tecnologia da informação), além de oferecermos um amplo suporte de
+                Marketing digital para dar aquele up no seu negocio.</p>
             </div>
-            <h4>Cursos e Treinamento</h4>
-            <p class="text-justify">Te oferecemos um curso completo envolvendo toda a sua gestão de TI(Tecnologia da informação), além de oferecermos um amplo suporte de
-              Marketing digital para dar aquele up no seu negocio.</p>
           </div>
         </div>
       </div>
@@ -343,7 +343,8 @@
               <div class="contact-us">
                 <h3>Fale Conosco</h3>
                 <div class="contact-address">
-                  <p>Centerville Road, DE 19808, US </p>
+                  <p>Rua São Francisco, 1224 <br>
+                  Juazeiro do Norte - Ceará </p>
                   <p class="phone">Telefone: <span>(+94 123 456 789)</span></p>
                   <p class="email">E-mail: <span>(contact@mate.com)</span></p>
                 </div>
@@ -375,7 +376,7 @@
                     </div>
                     <div class="col-md-12">
                       <div class="form-group">
-                        <textarea class="form-control" id="message" placeholder="Mensagem" rows="8" data-error="Write your message" required></textarea>
+                        <textarea class="form-control" id="message" placeholder="Mensagem" rows="8" data-error="Escreva sua mensagem" required></textarea>
                         <div class="help-block with-errors"></div>
                       </div>
                       <div class="submit-button text-center">
