--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
       </nav>
       <!-- Navbar End -->
       <div class="container">
-        <div class="row justify-content-md-left text-main">
-          <div class="col-md-6">
-            <div class="contents text-left">
-              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">QUE TAL DAR UM UP NO SEU NEGÓCIO!</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Aprenda de forma fácil como gerenciar recursos, adminstrar pessoas e otimizar seu tempo. </p>
+        <div class="row justify-content-md-center text-main">
+               <div class="contents text-center">
+              <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.9s">QUE TAL DAR UM UP NO SEU NEGÓCIO!</h1>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">Aprenda de forma fácil como gerenciar recursos, adminstrar pessoas e otimizar seu tempo. </p>
             </div>
           </div>
         </div>
