Atualização de parceiros

--- a/index.html
+++ b/index.html
@@ -275,16 +275,10 @@
           <div class="col-md-12">
             <div class="touch-slider owl-carousel owl-theme">
               <div class="testimonial-item">
-                <img src="img/partners/fjn.jpg" alt="Parceiro" />
+                <img src="img/partners/cei.png" alt="Parceiro" />
               </div>
               <div class="testimonial-item">
-                <img src="img/partners/github.jpg" alt="Parceiro" />
-              </div>
-              <div class="testimonial-item">
-                <img src="img/partners/laravel.jpg" alt="Parceiro" />
-              </div>
-              <div class="testimonial-item">
-                <img src="img/partners/angular.jpg" alt="Parceiro" />
+                <img src="img/partners/gm.png" alt="Parceiro" />
               </div>
             </div>
           </div>
